WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254024
REGRESSION: Bidi text gets wrongly wrapped when line-breaking
https://bugs.webkit.org/show_bug.cgi?id=254024
Summary
REGRESSION: Bidi text gets wrongly wrapped when line-breaking
zalan
Reported
2023-03-16 08:43:02 PDT
<
rdar://105038980
>
Attachments
Patch
(4.97 KB, patch)
2023-03-16 08:48 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-03-16 08:48:02 PDT
Created
attachment 465460
[details]
Patch
EWS
Comment 2
2023-03-16 12:19:19 PDT
Committed
261756@main
(ade45ddc4c8e): <
https://commits.webkit.org/261756@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465460
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug