Cherry-pick ade45ddc4c8e. rdar://problem/105038980

REGRESSION: Bidi text gets wrongly wrapped when line-breaking
    https://bugs.webkit.org/show_bug.cgi?id=254024
    <rdar://105038980>

    Reviewed by Antti Koivisto.

    Non-preserved tab characters need the same special treatment as non-preserved line breaks (replace them with space characters).

    * LayoutTests/fast/text/bidi-with-non-preserved-tab-expected.html: Added.
    * LayoutTests/fast/text/bidi-with-non-preserved-tab.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
    (WebCore::Layout::replaceNonPreservedNewLineAndTabCharactersAndAppend):
    (WebCore::Layout::buildBidiParagraph):
    (WebCore::Layout::replaceNonPreservedNewLineCharactersAndAppend): Deleted.

    Canonical link: https://commits.webkit.org/261756@main

Identifier: 259548.456@safari-7615-branch